<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jensjakupgaardbo.medialogy212.PlaceActivity">

    <Button
        android:id="@+id/btGetPlace"
        android:layout_width="157dp"
        android:layout_height="80dp"
        android:background="@color/colorAccent"
        android:text="@string/choose_a_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/tvPlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/tvPlaceAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687"
        app:layout_constraintHorizontal_bias="0.501" />

    <WebView
        android:id="@+id/wvAttribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attribution"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="466dp" />

    <TextView
        android:id="@+id/desc_placepicker"
        android:layout_width="320dp"
        android:layout_height="137dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/pressToPlace"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />


</android.support.constraint.ConstraintLayout>